--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,12 @@ Flask-PyMongo==3.0.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
+numpy==2.4.1
+pandas==3.0.0
 pillow==12.1.0
 pymongo==4.16.0
+python-dateutil==2.9.0.post0
 qrcode==8.2
+six==1.17.0
+tzdata==2025.3
 Werkzeug==3.1.5
