--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==3.1.2
 Flask-PyMongo==3.0.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
+joblib==1.5.3
 MarkupSafe==3.0.3
 numpy==2.4.1
 pandas==3.0.0
@@ -13,6 +14,9 @@ pillow==12.1.0
 pymongo==4.16.0
 python-dateutil==2.9.0.post0
 qrcode==8.2
+scikit-learn==1.8.0
+scipy==1.17.0
 six==1.17.0
+threadpoolctl==3.6.0
 tzdata==2025.3
 Werkzeug==3.1.5
